# Stellar

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.claude/: settings.local.json
backend/: package.json  tsconfig.json
backend/src/: app.js  app.ts  server.ts
backend/src/services/: buildManager.ts  configStore.ts  engineDetector.js  engineDetector.ts  types.ts
backend/src/utils/: schemas.js  schemas.ts
frontend/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.js  App.tsx  main.js  main.tsx  types.ts
frontend/src/components/: BuildControls.js  BuildControls.tsx  EnginePathCard.js  EnginePathCard.tsx  Header.js  Header.tsx  LogPanel.js  LogPanel.tsx  ProjectList.js  ProjectList.tsx  Starfield.js  TerminalPanel.js  TerminalPanel.tsx
frontend/src/hooks/: useBuild.js  useBuild.ts  useConfig.js  useConfig.ts
frontend/src/services/: backend.js  backend.ts  dialogs.js  dialogs.ts
frontend/src/styles/: app.css  base.css
frontend/src/utils/: logs.js  logs.ts
scripts/: sync-backend.mjs  sync-node.mjs  sync-release.mjs
shared/: package.json
shared/src/: constants.ts  index.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
