[package]
name = "stellar-tauri-ts"
version = "0.1.0"
description = "Stellar - Unreal Engine Project Builder"
authors = ["DevUser"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
